WIP: static type annotation

--- a/tox.ini
+++ b/tox.ini
@@ -46,3 +46,15 @@ commands =
     pyflakes setup.py src
     wormhole --version
     coverage run --branch -m wormhole.test.run_trial {posargs:wormhole}
+
+[testenv:mypy]
+# unfortunately, mypy (static type-annotation checking) requires py3
+deps =
+     virtualenv
+skip_install = True
+commands =
+         virtualenv --clear -p python3.5 mypy-venv
+         mypy-venv/bin/pip install mypy-lang
+         #mypy-venv/bin/mypy src/wormhole
+         python misc/run-mypy.py src/wormhole
+
