initial mypy execution framework

--- a/tox.ini
+++ b/tox.ini
@@ -49,12 +49,10 @@ commands =
 
 [testenv:mypy]
 # unfortunately, mypy (static type-annotation checking) requires py3
-deps =
-     virtualenv
+basepython=python3.5
+deps = mypy-lang
 skip_install = True
+usedevelop = False
 commands =
-         virtualenv --clear -p python3.5 mypy-venv
-         mypy-venv/bin/pip install mypy-lang
-         #mypy-venv/bin/mypy src/wormhole
-         python misc/run-mypy.py src/wormhole
-
+         mypy --config-file .mypy.ini {posargs:src/wormhole}
+         mypy --config-file .mypy.ini --py2 {posargs:src/wormhole}
