--- a/tox.ini
+++ b/tox.ini
@@ -50,9 +50,11 @@ commands =
 [testenv:mypy]
 # unfortunately, mypy (static type-annotation checking) requires py3
 basepython=python3.5
-deps = mypy-lang
+deps =
+     mypy-lang
+     lxml
 skip_install = True
 usedevelop = False
 commands =
-         mypy --config-file .mypy.ini {posargs:src/wormhole}
+         mypy --config-file .mypy.ini {posargs:src/wormhole} --html-report mypy-html
          mypy --config-file .mypy.ini --py2 {posargs:src/wormhole}
